# voco

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: PROGRESS.md  audit_backend_rust.md  audit_build_config.md  audit_frontend.md  implementation_plan.md  mcp_integration_plan.md
scripts/: build-sidecar.sh  install.sh
scripts/audio8/: README.md  dump_reference.py  run-server.sh
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/voco-mcp/: Cargo.toml
src-tauri/crates/voco-mcp/src/: content.rs  db.rs  main.rs  tools.rs
src-tauri/examples/: moss_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: mediaremote-adapter.pl  mediaremote-helper.dylib  mediaremote-helper.m
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/audio/: decode.rs  mic_capture.rs  mixer.rs  mod.rs  packet_ring.rs  resampler.rs  silero_vad.rs  system_capture.rs  vad.rs  vad_engine.rs
src-tauri/src/commands/: audio.rs  dictation.rs  export.rs  gcal.rs  llm.rs  mcp.rs  meeting.rs  mod.rs  models.rs  providers.rs  settings.rs  stats.rs  system.rs  window.rs
src-tauri/src/diarization/: clustering.rs  engine.rs  mod.rs  neural.rs  profiles.rs
src-tauri/src/llm/: client.rs  embedded.rs  local_runner.rs  mod.rs  prompt.rs
src-tauri/src/providers/: config.rs  health.rs  mod.rs  registry.rs
src-tauri/src/services/: dictation.rs  export.rs  focus.rs  hotkey.rs  media_control.rs  meeting.rs  mod.rs  sound.rs  text_injector.rs  text_processing.rs
src-tauri/src/storage/: database.rs  migrations.rs  mod.rs
src-tauri/src/stt/: api.rs  audio8.rs  engine.rs  manager.rs  mod.rs  moss.rs  parakeet.rs  whisper.rs
src-tauri/tests/: pipeline_integration.rs
src/components/common/: StatusIndicator.tsx  Toast.tsx
src/components/dictation/: DictationHistory.tsx
src/components/filetranscription/: FileTranscriptionPage.tsx
src/components/meeting/: AskBar.tsx  AudioPlayer.tsx  MeetingControls.tsx  MeetingList.tsx  MeetingNotePage.tsx  MeetingTimer.tsx  MeetingsHome.tsx  ScreenRecordingOnboarding.tsx  SpeakerTimeline.tsx  SummaryView.tsx  TemplateGallery.tsx  TranscriptSheet.tsx
src/components/models/: CustomModelAdder.tsx  ModelCard.tsx  ModelDownloader.tsx  ModelRecommendation.tsx  ModelSelector.tsx
src/components/onboarding/: FirstRunOnboarding.tsx  GettingStartedPage.tsx
src/components/providers/: ProviderForm.tsx  ProviderList.tsx  ProviderStatus.tsx
src/components/settings/: CustomDictionary.tsx  CustomThemeBuilder.tsx  DictationSettings.tsx  EngineSelector.tsx  GeneralSettings.tsx  GoogleCalendarSettings.tsx  HotkeySettings.tsx  IntegrationsSettings.tsx  LogsViewer.tsx  MeetingSettings.tsx  PerAppPrompts.tsx  RecordingSettings.tsx  ThemeSettings.tsx
src/components/stats/: StatsPage.tsx  StatsPill.tsx
src/components/transcript/: GlobalSearch.tsx  SegmentCard.tsx  SpeakerBadge.tsx  TranscriptView.tsx
src/components/ui/: Button.tsx  IconButton.tsx  TextField.tsx  Toggle.tsx  index.ts  ui.css
src/components/waveform/: WaveformCanvas.tsx
src/hooks/: useDictation.ts  useStreamingSummary.ts  useTheme.ts  useToast.ts
src/lib/: themes.ts
src/styles/: animations.css  index.css  meetings.css  onboarding.css  pill.css
src/styles/themes/: aurora.css  custom.css  daylight.css  midnight.css  monochrome.css  neon.css  ocean.css  rose.css  sunset.css
src/windows/: MainWindow.tsx  PillWindow.tsx
